--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
 	<head>
 		<title>Choose Your Own Adventure</title>
 		<meta charset="utf-8">
+		<link href="style.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
-		<h1>Choose Your Own Adventure</h1>
-		<p>Welcome to my website :)</p>
-		<p>This is a choose your own adventure story
-		where you decide the outcome!</p>
-		<p>Would you like to be a <a href="story/leader.html">leader</a>?</p>
-		<p>Would you like to be a <a href="story/follower.html">follower</a>?</p>
+		<div id="container">
+			<h1>Choose Your Own Adventure</h1>
+			<p>Welcome to my website!</p>
+			<p>This is a choose your own adventure story
+			where you decide the outcome!</p>
+			<p>Would you like to be a <a href="story/leader.html">leader</a>?</p>
+			<p>Would you like to be a <a href="story/follower.html">follower</a>?</p>
+		</div>
 	</body>
 </html>
 
