--- a/story/follower.html
+++ b/story/follower.html
@@ -4,11 +4,14 @@
 	<head>
 		<title>Choose Your Own Adventure</title>
 		<meta charset="utf-8">
+		<link href="../style.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
-		<h1>Choose Your Own Adventure</h1>
-		<p>You chose to be a follower! Stick with the leader or work with your fellow followers to try and overthrow them!</p>
-		<p>Changed your mind? Be a <a href="leader.html">leader</a> instead.</p>
-		<p><a href="../index.html">Start over.</a></p>
+		<div id="container">
+			<h1>Choose Your Own Adventure</h1>
+			<p>You chose to be a follower! Stick with the leader or work with your fellow followers to try and overthrow them!</p>
+			<p>Changed your mind? Be a <a href="leader.html">leader</a> instead.</p>
+			<p><a href="../index.html">Start over.</a></p>
+		</div>
 	</body>
 </html>
