adds media and additional html pages

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 			where you decide the outcome!</p>
 			<p>Would you like to be a <a href="story/leader.html">leader</a>?</p>
 			<p>Would you like to be a <a href="story/follower.html">follower</a>?</p>
+
+			<img src="media/decision.avif" alt="A man looking at a sign with two directions to choose from." width="100%">
 		</div>
 	</body>
 </html>
