--- a/story/leader.html
+++ b/story/leader.html
@@ -9,9 +9,12 @@
 	<body>
 		<div id="container">
 			<h1>Choose Your Own Adventure</h1>
-			<p>You chose to be a leader! Lead the followers! Don't let them revolt against you!</p>
+			<p>You chose to be a leader! Lead the followers! Make the right decision!</p>
+			<p>--> <a href="leader2.html">Be</a> the leader!</p>
 			<p>Changed your mind? Be a <a href="follower.html">follower</a> instead.</p>
 			<p><a href="../index.html">Start over.</a></p>
+
+			<img src="../media/leader.jpg" alt="A man leading a group of followers." width="100%">
 		</div>
 	</body>
 </html>
