--- a/story/follower2.html
+++ b/story/follower2.html
@@ -9,12 +9,11 @@
 	<body>
 		<div id="container">
 			<h1>Choose Your Own Adventure</h1>
-			<p>You chose to be a follower! Stick with the leader and hope that they make the right decision!</p>
-			<p>--> <a href="follower2.html">Follow</a> the leader!</p>
-			<p>Changed your mind? Be a <a href="leader.html">leader</a> instead.</p>
+			<p>You are stuck in a maze and must choose to go left or right. Since you decided to follow the leader, you cannot make this decision.</p>
+			<p>The leader decides to go right. Everyone <a href="followerEnd.html"> follows.</a></p>
 			<p><a href="../index.html">Start over.</a></p>
 
-			<img src="../media/follower.png" alt="A man following a path set by someone else." width="100%">
+			<img src="../media/leftright.jpg" alt="A street sign pointing to go left or right." width="100%">
 		</div>
 	</body>
 </html>
