--- a/story/leader4.html
+++ b/story/leader4.html
@@ -9,12 +9,11 @@
 	<body>
 		<div id="container">
 			<h1>Choose Your Own Adventure</h1>
-			<p>You chose to be a follower! Stick with the leader and hope that they make the right decision!</p>
-			<p>--> <a href="follower2.html">Follow</a> the leader!</p>
-			<p>Changed your mind? Be a <a href="leader.html">leader</a> instead.</p>
+			<p>You decided to go left and everyone follows. The group sees a bright white light at the end of a long tunnel...it looks like the exit!</p>
+			<p>Congratulations! You made the right decision!</a></p>
 			<p><a href="../index.html">Start over.</a></p>
 
-			<img src="../media/follower.png" alt="A man following a path set by someone else." width="100%">
+			<img src="../media/escape.jpeg" alt="A bright light at the end of a long tunnel." width="100%">
 		</div>
 	</body>
 </html>
